src2/objects/LST_OF_VAL__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Key_Code__c</fullName>
        <label>Language Key Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lst_Of_Val_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Lst Of Val UUID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Organization</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Organization</valueSetName>
        </valueSet>
    </fields>
    <label>LST_OF_VAL</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LST_OF_VALS</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>